Fix path issues in Colab notebook - ensure scripts run from correct directory

--- a/train_colab.ipynb
+++ b/train_colab.ipynb
@@ -545,7 +545,24 @@
       "outputs": [],
       "source": [
         "# Split dataset\n",
-        "!python src/split_dataset.py --dataset {ORIGINAL_DATASET} --seed 42\n"
+        "import os\n",
+        "import sys\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Ensure we're in the repo directory\n",
+        "REPO_DIR = \"/content/credit_card_yolov12\"\n",
+        "os.chdir(REPO_DIR)\n",
+        "sys.path.insert(0, REPO_DIR)\n",
+        "\n",
+        "# Verify script exists\n",
+        "script_path = Path(REPO_DIR) / \"src\" / \"split_dataset.py\"\n",
+        "if script_path.exists():\n",
+        "    print(f\"✅ Found script: {script_path}\")\n",
+        "    !python src/split_dataset.py --dataset {ORIGINAL_DATASET} --seed 42\n",
+        "else:\n",
+        "    print(f\"❌ Script not found at: {script_path}\")\n",
+        "    print(f\"Current directory: {os.getcwd()}\")\n",
+        "    print(f\"Files in src/: {list((Path(REPO_DIR) / 'src').glob('*.py'))}\")\n"
       ]
     },
     {
@@ -555,8 +572,25 @@
       "outputs": [],
       "source": [
         "# Generate progressive occlusion test sets\n",
+        "import os\n",
+        "import sys\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Ensure we're in the repo directory\n",
+        "REPO_DIR = \"/content/credit_card_yolov12\"\n",
+        "os.chdir(REPO_DIR)\n",
+        "sys.path.insert(0, REPO_DIR)\n",
+        "\n",
         "TEST_DATASET = f\"{DATASET_BASE}/credit-cards-coco_split/test\"\n",
-        "!python src/prepare_progressive_tests.py --test-dataset {TEST_DATASET} --type crop --seed 42\n"
+        "\n",
+        "# Verify script exists\n",
+        "script_path = Path(REPO_DIR) / \"src\" / \"prepare_progressive_tests.py\"\n",
+        "if script_path.exists():\n",
+        "    print(f\"✅ Found script: {script_path}\")\n",
+        "    !python src/prepare_progressive_tests.py --test-dataset {TEST_DATASET} --type crop --seed 42\n",
+        "else:\n",
+        "    print(f\"❌ Script not found at: {script_path}\")\n",
+        "    print(f\"Current directory: {os.getcwd()}\")\n"
       ]
     },
     {
@@ -728,13 +762,29 @@
       "outputs": [],
       "source": [
         "# Evaluate on progressive occlusion test sets\n",
+        "import os\n",
+        "import sys\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Ensure we're in the repo directory\n",
+        "REPO_DIR = \"/content/credit_card_yolov12\"\n",
+        "os.chdir(REPO_DIR)\n",
+        "sys.path.insert(0, REPO_DIR)\n",
+        "\n",
         "BEST_MODEL = f\"{DRIVE_MODEL_DIR}/best.pt\"\n",
         "TEST_SETS_BASE = f\"{DATASET_BASE}/credit-cards-coco_split\"\n",
         "\n",
-        "!python src/evaluate_progressive.py \\\n",
-        "    --model {BEST_MODEL} \\\n",
-        "    --test-sets {TEST_SETS_BASE} \\\n",
-        "    --output /content/drive/MyDrive/credit_card_yolov12/outputs/progressive_evaluation\n"
+        "# Verify script exists\n",
+        "script_path = Path(REPO_DIR) / \"src\" / \"evaluate_progressive.py\"\n",
+        "if script_path.exists():\n",
+        "    print(f\"✅ Found script: {script_path}\")\n",
+        "    !python src/evaluate_progressive.py \\\n",
+        "        --model {BEST_MODEL} \\\n",
+        "        --test-sets {TEST_SETS_BASE} \\\n",
+        "        --output /content/drive/MyDrive/credit_card_yolov12/outputs/progressive_evaluation\n",
+        "else:\n",
+        "    print(f\"❌ Script not found at: {script_path}\")\n",
+        "    print(f\"Current directory: {os.getcwd()}\")\n"
       ]
     },
     {
