Fix progressive evaluation - auto-detect split directory and annotation file paths

--- a/train_colab.ipynb
+++ b/train_colab.ipynb
@@ -818,8 +818,18 @@
         "os.chdir(REPO_DIR)\n",
         "sys.path.insert(0, REPO_DIR)\n",
         "\n",
-        "BEST_MODEL = f\"{DRIVE_MODEL_DIR}/best.pt\"\n",
-        "TEST_SETS_BASE = f\"{DATASET_BASE}/credit-cards-coco_split\"\n",
+        "# Find the actual split directory\n",
+        "split_dirs = list(Path(DATASET_BASE).glob(\"*_split\"))\n",
+        "if split_dirs:\n",
+        "    TEST_SETS_BASE = str(split_dirs[0])\n",
+        "    print(f\"✅ Found split directory: {TEST_SETS_BASE}\")\n",
+        "else:\n",
+        "    TEST_SETS_BASE = f\"{DATASET_BASE}/credit-cards-coco_split\"\n",
+        "    print(f\"⚠️ Using fallback: {TEST_SETS_BASE}\")\n",
+        "\n",
+        "BEST_MODEL = f\"{DRIVE_MODEL_DIR}/weights/best.pt\"\n",
+        "print(f\"Best model: {BEST_MODEL}\")\n",
+        "print(f\"Test sets base: {TEST_SETS_BASE}\")\n",
         "\n",
         "# Verify script exists\n",
         "script_path = Path(REPO_DIR) / \"src\" / \"evaluate_progressive.py\"\n",
