Update notebook to download multiple Google Drive datasets

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -132,41 +132,80 @@
         "import gdown\n",
         "from pathlib import Path\n",
         "import zipfile\n",
+        "import shutil\n",
         "\n",
-        "# Google Drive file ID\n",
-        "PRIVATE_FILE_ID = \"1ClFqB6vvVXqmru4hA5JhkphyfEEwjyte\"\n",
+        "# Google Drive file IDs\n",
+        "PRIVATE_FILE_IDS = [\n",
+        "    \"1ClFqB6vvVXqmru4hA5JhkphyfEEwjyte\",  # Original dataset\n",
+        "    \"1Y7jh8lTfAuTqIaDkrF9AS8XJaSAfsGwu\",  # Additional dataset 1\n",
+        "    \"1GEF0-6MVMrwSGdvbZtcIp9rB82-wqkDL\"    # Additional dataset 2\n",
+        "]\n",
         "\n",
         "# Download location\n",
         "DATASET_BASE = \"/content/drive/MyDrive/credit_card_yolov12/datasets\"\n",
         "Path(DATASET_BASE).mkdir(parents=True, exist_ok=True)\n",
         "\n",
-        "# Download dataset\n",
-        "zip_path = f\"{DATASET_BASE}/private_dataset.zip\"\n",
-        "print(f\"Downloading private dataset from Google Drive...\")\n",
-        "print(f\"File ID: {PRIVATE_FILE_ID}\")\n",
+        "# Main extract directory\n",
+        "extract_dir = f\"{DATASET_BASE}/private_dataset\"\n",
+        "Path(extract_dir).mkdir(parents=True, exist_ok=True)\n",
         "\n",
-        "# Download using gdown\n",
-        "url = f\"https://drive.google.com/uc?id={PRIVATE_FILE_ID}\"\n",
-        "gdown.download(url, zip_path, quiet=False)\n",
+        "# Download and extract all datasets\n",
+        "print(f\"Downloading {len(PRIVATE_FILE_IDS)} datasets from Google Drive...\\n\")\n",
         "\n",
-        "# Extract dataset\n",
-        "if Path(zip_path).exists():\n",
-        "    print(f\"\\nExtracting dataset...\")\n",
-        "    extract_dir = f\"{DATASET_BASE}/private_dataset\"\n",
-        "    with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
-        "        zip_ref.extractall(extract_dir)\n",
-        "    print(f\"✅ Dataset extracted to: {extract_dir}\")\n",
+        "for idx, file_id in enumerate(PRIVATE_FILE_IDS, 1):\n",
+        "    zip_path = f\"{DATASET_BASE}/private_dataset_{idx}.zip\"\n",
+        "    print(f\"[{idx}/{len(PRIVATE_FILE_IDS)}] Downloading dataset {idx}...\")\n",
+        "    print(f\"   File ID: {file_id}\")\n",
         "    \n",
-        "    # Find the actual dataset folder\n",
-        "    dataset_folders = list(Path(extract_dir).glob(\"*\"))\n",
-        "    if dataset_folders:\n",
+        "    # Download using gdown\n",
+        "    url = f\"https://drive.google.com/uc?id={file_id}\"\n",
+        "    try:\n",
+        "        gdown.download(url, zip_path, quiet=False)\n",
+        "        \n",
+        "        # Extract dataset\n",
+        "        if Path(zip_path).exists():\n",
+        "            print(f\"   Extracting to: {extract_dir}\")\n",
+        "            with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
+        "                zip_ref.extractall(extract_dir)\n",
+        "            print(f\"   ✅ Dataset {idx} extracted successfully\\n\")\n",
+        "            \n",
+        "            # Clean up zip file\n",
+        "            Path(zip_path).unlink()\n",
+        "        else:\n",
+        "            print(f\"   ⚠️ Warning: Download failed for dataset {idx}\\n\")\n",
+        "    except Exception as e:\n",
+        "        print(f\"   ❌ Error downloading dataset {idx}: {e}\\n\")\n",
+        "\n",
+        "# Find the actual dataset folder(s)\n",
+        "print(f\"Looking for dataset folders in: {extract_dir}\")\n",
+        "dataset_folders = [d for d in Path(extract_dir).iterdir() if d.is_dir()]\n",
+        "\n",
+        "if dataset_folders:\n",
+        "    # Check if there's a train folder directly in extract_dir\n",
+        "    train_in_root = Path(extract_dir) / \"train\"\n",
+        "    if train_in_root.exists():\n",
+        "        ORIGINAL_DATASET = extract_dir\n",
+        "        print(f\"✅ Found dataset structure in root: {ORIGINAL_DATASET}\")\n",
+        "    else:\n",
+        "        # Use the first dataset folder found\n",
         "        ORIGINAL_DATASET = str(dataset_folders[0])\n",
         "        print(f\"✅ Found dataset: {ORIGINAL_DATASET}\")\n",
-        "    else:\n",
-        "        ORIGINAL_DATASET = extract_dir\n",
-        "        print(f\"⚠️ Using extract directory as dataset\")\n",
+        "        print(f\"   (Found {len(dataset_folders)} folder(s) total)\")\n",
+        "        \n",
+        "        # If multiple folders, list them\n",
+        "        if len(dataset_folders) > 1:\n",
+        "            print(f\"\\n   All extracted folders:\")\n",
+        "            for folder in dataset_folders:\n",
+        "                train_check = folder / \"train\"\n",
+        "                if train_check.exists():\n",
+        "                    print(f\"   ✅ {folder.name} (has train folder)\")\n",
+        "                else:\n",
+        "                    print(f\"   📁 {folder.name}\")\n",
         "else:\n",
-        "    raise FileNotFoundError(f\"Download failed: {zip_path}\")\n"
+        "    ORIGINAL_DATASET = extract_dir\n",
+        "    print(f\"⚠️ Using extract directory as dataset: {ORIGINAL_DATASET}\")\n",
+        "\n",
+        "print(f\"\\n✅ Final dataset path: {ORIGINAL_DATASET}\")\n"
       ]
     },
     {
