Fix dataset detection: prioritize query_images and prevent __MACOSX selection

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -180,7 +180,7 @@
         "print(f\"\\nLooking for dataset folders in: {extract_dir}\")\n",
         "print(f\"=\" * 60)\n",
         "\n",
-        "# Skip macOS metadata folders\n",
+        "# Skip macOS metadata folders - NEVER select these\n",
         "skip_folders = {'__MACOSX', '.DS_Store'}\n",
         "\n",
         "# Check if there's a train folder directly in extract_dir\n",
@@ -192,15 +192,26 @@
         "    # Find all folders, excluding macOS metadata\n",
         "    all_folders = [d for d in Path(extract_dir).iterdir() if d.is_dir() and d.name not in skip_folders]\n",
         "    \n",
+        "    # Show all extracted folders for debugging\n",
+        "    print(f\"\\nAll extracted folders:\")\n",
+        "    for folder in sorted(Path(extract_dir).iterdir()):\n",
+        "        if folder.is_dir():\n",
+        "            marker = \"❌ SKIP\" if folder.name in skip_folders else \"📁\"\n",
+        "            print(f\"   {marker} {folder.name}\")\n",
+        "    \n",
         "    if not all_folders:\n",
         "        ORIGINAL_DATASET = extract_dir\n",
-        "        print(f\"⚠️ No dataset folders found, using extract directory: {ORIGINAL_DATASET}\")\n",
+        "        print(f\"\\n⚠️ No dataset folders found, using extract directory: {ORIGINAL_DATASET}\")\n",
         "    else:\n",
-        "        print(f\"Found {len(all_folders)} folder(s) (excluding macOS metadata):\\n\")\n",
+        "        print(f\"\\nFound {len(all_folders)} valid folder(s) (excluding macOS metadata):\\n\")\n",
         "        \n",
         "        # Check each folder for dataset structure\n",
         "        dataset_candidates = []\n",
         "        for folder in sorted(all_folders):  # Sort for consistent ordering\n",
+        "            # Double-check: skip __MACOSX\n",
+        "            if folder.name in skip_folders:\n",
+        "                continue\n",
+        "                \n",
         "            train_check = folder / \"train\"\n",
         "            ann_check = list(folder.glob(\"**/_annotations.coco.json\"))\n",
         "            has_images = len(list(folder.glob(\"**/*.jpg\"))) + len(list(folder.glob(\"**/*.png\"))) > 0\n",
@@ -210,42 +221,145 @@
         "                train_images = len(list((train_check).glob(\"*.jpg\"))) + len(list((train_check).glob(\"*.png\")))\n",
         "                train_anns = len(list((train_check).glob(\"*.json\")))\n",
         "                print(f\"   ✅ {folder.name} - Has 'train' folder ({train_images} images, {train_anns} annotations)\")\n",
-        "                dataset_candidates.append((folder, \"train\", True, train_images))\n",
+        "                dataset_candidates.append((folder, \"train\", True, train_images, folder.name))\n",
         "            elif ann_check:\n",
         "                print(f\"   ✅ {folder.name} - Has COCO annotations ({len(ann_check)} files, {image_count} images)\")\n",
-        "                dataset_candidates.append((folder, \"annotations\", True, image_count))\n",
+        "                dataset_candidates.append((folder, \"annotations\", True, image_count, folder.name))\n",
         "            elif has_images:\n",
         "                print(f\"   📁 {folder.name} - Has images ({image_count} images, no annotations found)\")\n",
-        "                dataset_candidates.append((folder, \"images\", False, image_count))\n",
+        "                dataset_candidates.append((folder, \"images\", False, image_count, folder.name))\n",
         "            else:\n",
         "                print(f\"   📁 {folder.name} - Empty or unknown structure\")\n",
         "        \n",
-        "        # Select the best candidate\n",
+        "        # Handle multiple dataset folders\n",
         "        if dataset_candidates:\n",
-        "            # Prefer folders with train structure\n",
-        "            train_candidates = [c for c in dataset_candidates if c[1] == \"train\"]\n",
-        "            if train_candidates:\n",
-        "                # If multiple train folders, prefer the one with most images\n",
-        "                best_train = max(train_candidates, key=lambda x: x[3])\n",
-        "                ORIGINAL_DATASET = str(best_train[0])\n",
-        "                print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has train folder with {best_train[3]} images)\")\n",
-        "            else:\n",
-        "                # Fall back to annotation-based\n",
-        "                ann_candidates = [c for c in dataset_candidates if c[1] == \"annotations\"]\n",
-        "                if ann_candidates:\n",
-        "                    # Prefer the one with most images\n",
-        "                    best_ann = max(ann_candidates, key=lambda x: x[3])\n",
-        "                    ORIGINAL_DATASET = str(best_ann[0])\n",
-        "                    print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has annotations, {best_ann[3]} images)\")\n",
+        "            # PRIORITY 1: Prefer query_images if it exists\n",
+        "            query_candidates = [c for c in dataset_candidates if 'query' in c[4].lower()]\n",
+        "            if query_candidates:\n",
+        "                # Prefer query_images with train structure\n",
+        "                query_train = [c for c in query_candidates if c[1] == \"train\"]\n",
+        "                if query_train:\n",
+        "                    ORIGINAL_DATASET = str(query_train[0][0])\n",
+        "                    print(f\"\\n✅ Selected query_images dataset: {ORIGINAL_DATASET} ({query_train[0][3]} images)\")\n",
         "                else:\n",
-        "                    # Use folder with most images\n",
-        "                    best_images = max(dataset_candidates, key=lambda x: x[3])\n",
-        "                    ORIGINAL_DATASET = str(best_images[0])\n",
-        "                    print(f\"\\n⚠️ Selected dataset: {ORIGINAL_DATASET} (has {best_images[3]} images, no annotations)\")\n",
-        "                    print(f\"   Note: May need manual verification of structure\")\n",
+        "                    # Use query folder with most images\n",
+        "                    best_query = max(query_candidates, key=lambda x: x[3])\n",
+        "                    ORIGINAL_DATASET = str(best_query[0])\n",
+        "                    print(f\"\\n✅ Selected query_images dataset: {ORIGINAL_DATASET} ({best_query[3]} images)\")\n",
+        "            else:\n",
+        "                # PRIORITY 2: Prefer folders with train structure\n",
+        "                train_candidates = [c for c in dataset_candidates if c[1] == \"train\"]\n",
+        "                \n",
+        "                if train_candidates:\n",
+        "                    # If we have multiple train folders (e.g., left_rotate and right_rotate), combine them\n",
+        "                    if len(train_candidates) > 1:\n",
+        "                    print(f\"\\n📦 Found {len(train_candidates)} dataset folders with train structure:\")\n",
+        "                    total_images = sum(c[3] for c in train_candidates)\n",
+        "                    for c in train_candidates:\n",
+        "                        print(f\"   - {c[0].name}: {c[3]} images\")\n",
+        "                    \n",
+        "                    # Create merged dataset directory\n",
+        "                    merged_dir = Path(extract_dir) / \"merged_dataset\"\n",
+        "                    merged_dir.mkdir(exist_ok=True)\n",
+        "                    merged_train = merged_dir / \"train\"\n",
+        "                    merged_train.mkdir(exist_ok=True)\n",
+        "                    \n",
+        "                    print(f\"\\n🔄 Combining datasets into: {merged_dir}\")\n",
+        "                    \n",
+        "                    # Merge all train folders\n",
+        "                    import shutil\n",
+        "                    import json\n",
+        "                    from collections import defaultdict\n",
+        "                    \n",
+        "                    all_images = []\n",
+        "                    all_annotations = []\n",
+        "                    image_id_offset = 0\n",
+        "                    ann_id_offset = 0\n",
+        "                    categories_map = {}\n",
+        "                    \n",
+        "                    for folder_path, _, _, _ in train_candidates:\n",
+        "                        train_folder = folder_path / \"train\"\n",
+        "                        ann_file = train_folder / \"_annotations.coco.json\"\n",
+        "                        \n",
+        "                        if ann_file.exists():\n",
+        "                            with open(ann_file, 'r') as f:\n",
+        "                                coco_data = json.load(f)\n",
+        "                            \n",
+        "                            # Merge categories (assuming same categories)\n",
+        "                            if not categories_map:\n",
+        "                                categories_map = {cat['id']: cat for cat in coco_data.get('categories', [])}\n",
+        "                            \n",
+        "                            # Copy images and update IDs\n",
+        "                            for img in coco_data.get('images', []):\n",
+        "                                img['id'] = image_id_offset + img['id']\n",
+        "                                src_img = train_folder / img['file_name']\n",
+        "                                if src_img.exists():\n",
+        "                                    dst_img = merged_train / img['file_name']\n",
+        "                                    # Handle filename conflicts\n",
+        "                                    if dst_img.exists():\n",
+        "                                        stem = Path(img['file_name']).stem\n",
+        "                                        ext = Path(img['file_name']).suffix\n",
+        "                                        img['file_name'] = f\"{folder_path.name}_{stem}{ext}\"\n",
+        "                                        dst_img = merged_train / img['file_name']\n",
+        "                                    shutil.copy2(src_img, dst_img)\n",
+        "                                    all_images.append(img)\n",
+        "                            \n",
+        "                            # Update annotation IDs\n",
+        "                            for ann in coco_data.get('annotations', []):\n",
+        "                                ann['id'] = ann_id_offset + ann['id']\n",
+        "                                ann['image_id'] = image_id_offset + ann['image_id']\n",
+        "                                all_annotations.append(ann)\n",
+        "                            \n",
+        "                            image_id_offset = max(img['id'] for img in all_images) + 1\n",
+        "                            ann_id_offset = max(ann['id'] for ann in all_annotations) + 1\n",
+        "                    \n",
+        "                    # Create merged COCO annotation file\n",
+        "                    merged_coco = {\n",
+        "                        'images': all_images,\n",
+        "                        'annotations': all_annotations,\n",
+        "                        'categories': list(categories_map.values())\n",
+        "                    }\n",
+        "                    \n",
+        "                    merged_ann_file = merged_train / \"_annotations.coco.json\"\n",
+        "                    with open(merged_ann_file, 'w') as f:\n",
+        "                        json.dump(merged_coco, f, indent=2)\n",
+        "                    \n",
+        "                    print(f\"   ✅ Merged {len(all_images)} images and {len(all_annotations)} annotations\")\n",
+        "                    print(f\"   ✅ Created merged dataset: {merged_dir}\")\n",
+        "                    \n",
+        "                    ORIGINAL_DATASET = str(merged_dir)\n",
+        "                    else:\n",
+        "                        # Single train folder\n",
+        "                        best_train = train_candidates[0]\n",
+        "                        ORIGINAL_DATASET = str(best_train[0])\n",
+        "                        print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has train folder with {best_train[3]} images)\")\n",
+        "                else:\n",
+        "                    # Fall back to annotation-based\n",
+        "                    ann_candidates = [c for c in dataset_candidates if c[1] == \"annotations\"]\n",
+        "                    if ann_candidates:\n",
+        "                        # Prefer the one with most images\n",
+        "                        best_ann = max(ann_candidates, key=lambda x: x[3])\n",
+        "                        ORIGINAL_DATASET = str(best_ann[0])\n",
+        "                        print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has annotations, {best_ann[3]} images)\")\n",
+        "                    else:\n",
+        "                        # Use folder with most images\n",
+        "                        best_images = max(dataset_candidates, key=lambda x: x[3])\n",
+        "                        ORIGINAL_DATASET = str(best_images[0])\n",
+        "                        print(f\"\\n⚠️ Selected dataset: {ORIGINAL_DATASET} (has {best_images[3]} images, no annotations)\")\n",
+        "                        print(f\"   Note: May need manual verification of structure\")\n",
         "        else:\n",
         "            ORIGINAL_DATASET = extract_dir\n",
         "            print(f\"\\n⚠️ No valid dataset structure found, using extract directory\")\n",
+        "        \n",
+        "        # Final safety check: NEVER use __MACOSX\n",
+        "        if '__MACOSX' in str(ORIGINAL_DATASET) or Path(ORIGINAL_DATASET).name == '__MACOSX':\n",
+        "            print(f\"\\n❌ ERROR: __MACOSX was selected! This should never happen.\")\n",
+        "            # Fallback to first valid folder\n",
+        "            if all_folders:\n",
+        "                ORIGINAL_DATASET = str(all_folders[0])\n",
+        "                print(f\"   Using fallback: {ORIGINAL_DATASET}\")\n",
+        "            else:\n",
+        "                raise ValueError(\"Cannot find valid dataset folder\")\n",
         "\n",
         "print(f\"\\n{'=' * 60}\")\n",
         "print(f\"✅ Final dataset path: {ORIGINAL_DATASET}\")\n",
