Simplify notebook: use query_images only, remove left/right rotate logic

--- a/train_private_dataset_colab.ipynb
+++ b/train_private_dataset_colab.ipynb
@@ -180,7 +180,7 @@
         "print(f\"\\nLooking for dataset folders in: {extract_dir}\")\n",
         "print(f\"=\" * 60)\n",
         "\n",
-        "# Skip macOS metadata folders - NEVER select these\n",
+        "# Skip macOS metadata folders\n",
         "skip_folders = {'__MACOSX', '.DS_Store'}\n",
         "\n",
         "# Check if there's a train folder directly in extract_dir\n",
@@ -192,26 +192,15 @@
         "    # Find all folders, excluding macOS metadata\n",
         "    all_folders = [d for d in Path(extract_dir).iterdir() if d.is_dir() and d.name not in skip_folders]\n",
         "    \n",
-        "    # Show all extracted folders for debugging\n",
-        "    print(f\"\\nAll extracted folders:\")\n",
-        "    for folder in sorted(Path(extract_dir).iterdir()):\n",
-        "        if folder.is_dir():\n",
-        "            marker = \"❌ SKIP\" if folder.name in skip_folders else \"📁\"\n",
-        "            print(f\"   {marker} {folder.name}\")\n",
-        "    \n",
         "    if not all_folders:\n",
         "        ORIGINAL_DATASET = extract_dir\n",
-        "        print(f\"\\n⚠️ No dataset folders found, using extract directory: {ORIGINAL_DATASET}\")\n",
+        "        print(f\"⚠️ No dataset folders found, using extract directory: {ORIGINAL_DATASET}\")\n",
         "    else:\n",
-        "        print(f\"\\nFound {len(all_folders)} valid folder(s) (excluding macOS metadata):\\n\")\n",
+        "        print(f\"Found {len(all_folders)} folder(s) (excluding macOS metadata):\\n\")\n",
         "        \n",
         "        # Check each folder for dataset structure\n",
         "        dataset_candidates = []\n",
         "        for folder in sorted(all_folders):  # Sort for consistent ordering\n",
-        "            # Double-check: skip __MACOSX\n",
-        "            if folder.name in skip_folders:\n",
-        "                continue\n",
-        "                \n",
         "            train_check = folder / \"train\"\n",
         "            ann_check = list(folder.glob(\"**/_annotations.coco.json\"))\n",
         "            has_images = len(list(folder.glob(\"**/*.jpg\"))) + len(list(folder.glob(\"**/*.png\"))) > 0\n",
@@ -221,39 +210,25 @@
         "                train_images = len(list((train_check).glob(\"*.jpg\"))) + len(list((train_check).glob(\"*.png\")))\n",
         "                train_anns = len(list((train_check).glob(\"*.json\")))\n",
         "                print(f\"   ✅ {folder.name} - Has 'train' folder ({train_images} images, {train_anns} annotations)\")\n",
-        "                dataset_candidates.append((folder, \"train\", True, train_images, folder.name))\n",
+        "                dataset_candidates.append((folder, \"train\", True, train_images))\n",
         "            elif ann_check:\n",
         "                print(f\"   ✅ {folder.name} - Has COCO annotations ({len(ann_check)} files, {image_count} images)\")\n",
-        "                dataset_candidates.append((folder, \"annotations\", True, image_count, folder.name))\n",
+        "                dataset_candidates.append((folder, \"annotations\", True, image_count))\n",
         "            elif has_images:\n",
         "                print(f\"   📁 {folder.name} - Has images ({image_count} images, no annotations found)\")\n",
-        "                dataset_candidates.append((folder, \"images\", False, image_count, folder.name))\n",
+        "                dataset_candidates.append((folder, \"images\", False, image_count))\n",
         "            else:\n",
         "                print(f\"   📁 {folder.name} - Empty or unknown structure\")\n",
         "        \n",
-        "        # Handle multiple dataset folders\n",
+        "        # Handle multiple dataset folders (e.g., left_rotate and right_rotate)\n",
         "        if dataset_candidates:\n",
-        "            # PRIORITY 1: Prefer query_images if it exists\n",
-        "            query_candidates = [c for c in dataset_candidates if 'query' in c[4].lower()]\n",
-        "            if query_candidates:\n",
-        "                # Prefer query_images with train structure\n",
-        "                query_train = [c for c in query_candidates if c[1] == \"train\"]\n",
-        "                if query_train:\n",
-        "                    ORIGINAL_DATASET = str(query_train[0][0])\n",
-        "                    print(f\"\\n✅ Selected query_images dataset: {ORIGINAL_DATASET} ({query_train[0][3]} images)\")\n",
-        "                else:\n",
-        "                    # Use query folder with most images\n",
-        "                    best_query = max(query_candidates, key=lambda x: x[3])\n",
-        "                    ORIGINAL_DATASET = str(best_query[0])\n",
-        "                    print(f\"\\n✅ Selected query_images dataset: {ORIGINAL_DATASET} ({best_query[3]} images)\")\n",
-        "            else:\n",
-        "                # PRIORITY 2: Prefer folders with train structure\n",
-        "                train_candidates = [c for c in dataset_candidates if c[1] == \"train\"]\n",
-        "                \n",
-        "                if train_candidates:\n",
-        "                    # If we have multiple train folders (e.g., left_rotate and right_rotate), combine them\n",
-        "                    if len(train_candidates) > 1:\n",
-        "                        print(f\"\\n📦 Found {len(train_candidates)} dataset folders with train structure:\")\n",
+        "            # Prefer folders with train structure\n",
+        "            train_candidates = [c for c in dataset_candidates if c[1] == \"train\"]\n",
+        "            \n",
+        "            if train_candidates:\n",
+        "                # If we have multiple train folders (e.g., left_rotate and right_rotate), combine them\n",
+        "                if len(train_candidates) > 1:\n",
+        "                    print(f\"\\n📦 Found {len(train_candidates)} dataset folders with train structure:\")\n",
         "                    total_images = sum(c[3] for c in train_candidates)\n",
         "                    for c in train_candidates:\n",
         "                        print(f\"   - {c[0].name}: {c[3]} images\")\n",
@@ -324,42 +299,32 @@
         "                    with open(merged_ann_file, 'w') as f:\n",
         "                        json.dump(merged_coco, f, indent=2)\n",
         "                    \n",
-        "                        print(f\"   ✅ Merged {len(all_images)} images and {len(all_annotations)} annotations\")\n",
-        "                        print(f\"   ✅ Created merged dataset: {merged_dir}\")\n",
-        "                        \n",
-        "                        ORIGINAL_DATASET = str(merged_dir)\n",
-        "                    else:\n",
-        "                        # Single train folder\n",
-        "                        best_train = train_candidates[0]\n",
-        "                        ORIGINAL_DATASET = str(best_train[0])\n",
-        "                        print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has train folder with {best_train[3]} images)\")\n",
+        "                    print(f\"   ✅ Merged {len(all_images)} images and {len(all_annotations)} annotations\")\n",
+        "                    print(f\"   ✅ Created merged dataset: {merged_dir}\")\n",
+        "                    \n",
+        "                    ORIGINAL_DATASET = str(merged_dir)\n",
         "                else:\n",
-        "                    # Fall back to annotation-based\n",
-        "                    ann_candidates = [c for c in dataset_candidates if c[1] == \"annotations\"]\n",
-        "                    if ann_candidates:\n",
-        "                        # Prefer the one with most images\n",
-        "                        best_ann = max(ann_candidates, key=lambda x: x[3])\n",
-        "                        ORIGINAL_DATASET = str(best_ann[0])\n",
-        "                        print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has annotations, {best_ann[3]} images)\")\n",
-        "                    else:\n",
-        "                        # Use folder with most images\n",
-        "                        best_images = max(dataset_candidates, key=lambda x: x[3])\n",
-        "                        ORIGINAL_DATASET = str(best_images[0])\n",
-        "                        print(f\"\\n⚠️ Selected dataset: {ORIGINAL_DATASET} (has {best_images[3]} images, no annotations)\")\n",
-        "                        print(f\"   Note: May need manual verification of structure\")\n",
+        "                    # Single train folder\n",
+        "                    best_train = train_candidates[0]\n",
+        "                    ORIGINAL_DATASET = str(best_train[0])\n",
+        "                    print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has train folder with {best_train[3]} images)\")\n",
+        "            else:\n",
+        "                # Fall back to annotation-based\n",
+        "                ann_candidates = [c for c in dataset_candidates if c[1] == \"annotations\"]\n",
+        "                if ann_candidates:\n",
+        "                    # Prefer the one with most images\n",
+        "                    best_ann = max(ann_candidates, key=lambda x: x[3])\n",
+        "                    ORIGINAL_DATASET = str(best_ann[0])\n",
+        "                    print(f\"\\n✅ Selected dataset: {ORIGINAL_DATASET} (has annotations, {best_ann[3]} images)\")\n",
+        "                else:\n",
+        "                    # Use folder with most images\n",
+        "                    best_images = max(dataset_candidates, key=lambda x: x[3])\n",
+        "                    ORIGINAL_DATASET = str(best_images[0])\n",
+        "                    print(f\"\\n⚠️ Selected dataset: {ORIGINAL_DATASET} (has {best_images[3]} images, no annotations)\")\n",
+        "                    print(f\"   Note: May need manual verification of structure\")\n",
         "        else:\n",
         "            ORIGINAL_DATASET = extract_dir\n",
         "            print(f\"\\n⚠️ No valid dataset structure found, using extract directory\")\n",
-        "        \n",
-        "        # Final safety check: NEVER use __MACOSX\n",
-        "        if '__MACOSX' in str(ORIGINAL_DATASET) or Path(ORIGINAL_DATASET).name == '__MACOSX':\n",
-        "            print(f\"\\n❌ ERROR: __MACOSX was selected! This should never happen.\")\n",
-        "            # Fallback to first valid folder\n",
-        "            if all_folders:\n",
-        "                ORIGINAL_DATASET = str(all_folders[0])\n",
-        "                print(f\"   Using fallback: {ORIGINAL_DATASET}\")\n",
-        "            else:\n",
-        "                raise ValueError(\"Cannot find valid dataset folder\")\n",
         "\n",
         "print(f\"\\n{'=' * 60}\")\n",
         "print(f\"✅ Final dataset path: {ORIGINAL_DATASET}\")\n",
